<resources>
    <string name="app_name">Mazaady-Task</string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="select_main_category">Select Main Category</string>
    <string name="from_user">From User</string>
    <string name="type">Type</string>
    <string name="brand">Brand</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="add_new_mazaad">Create new mazzad</string>

    <string name="process_type">Process Type</string>
    <string name="model">Model</string>
    <string name="transmission_type">Transmission Type</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="condition">Condition</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>
    <string name="loading_categories">Loading Categories</string>
    <string name="loading_sub_category_data">Loading Sub Category Data</string>
    <string name="loading_options_data">Loading Options Data</string>
    <string name="no_internt_connection">No Internt Connection</string>
    <string name="specify_here">Specify Here</string>
    <string name="please_specify">Please enter</string>
    <string name="mazaad_data">Mazaad Data</string>
    <string name="current_auction">المزاد الحالي</string>
    <string name="Specify_here">Specify here</string>
    <string name="clear">Clear</string>

</resources>